# IRM-cours-AdvancedIA

./: .gitignore  README.md  pyproject.toml
cli_replications/: reproduce_paper_results.fish  runall.fish  varying_environments.fish
cli_replications/original_experiments/20k_iterations/: gather.fish
cli_replications/original_experiments/20k_iterations/ones1:hidden0:scramble0:hetero0/: irm_config_2022-02-21_02:53:26.toml  irm_results_2022-02-21_03:12:41.csv  irm_training_2022-02-21_02:53:29.csv  irm_training_2022-02-21_02:55:26.csv  irm_training_2022-02-21_02:57:20.csv  irm_training_2022-02-21_02:59:17.csv  irm_training_2022-02-21_03:01:12.csv  irm_training_2022-02-21_03:03:04.csv  irm_training_2022-02-21_03:04:58.csv  irm_training_2022-02-21_03:06:58.csv  irm_training_2022-02-21_03:08:54.csv  irm_training_2022-02-21_03:10:51.csv
cli_replications/original_experiments/20k_iterations/ones1:hidden0:scramble0:hetero1/: irm_config_2022-02-21_01:36:38.toml  irm_results_2022-02-21_01:55:52.csv  irm_training_2022-02-21_01:36:42.csv  irm_training_2022-02-21_01:38:39.csv  irm_training_2022-02-21_01:40:31.csv  irm_training_2022-02-21_01:42:24.csv  irm_training_2022-02-21_01:44:22.csv  irm_training_2022-02-21_01:46:19.csv  (+4 more)
cli_replications/varying_number_of_environments/: full_out.txt  varying_environments.fish  varying_environments_even.fish  varying_environments_out.txt
colored_mnist/: Boosting.py  ERM_colored_mnist.py
irm/: __main__.py
irm/experiment_synthetic/: cli.py  main.py  models.py  sem.py
irm/image/: CNN.py
tests/: test_irm.py
(+470 files in other folders)
