[tool.poetry]
name = "IRM"
version = "0.1.0"
description = ""
authors = ["Gustavo Magaña López <28574085+gmagannaDevelop@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.2.28"
torch = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.0.1"
pylint = "^2.12.2"
jupyter = "^1.0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
