[tool.poetry]
name = "IRM"
version = "0.1.0"
description = ""
authors = ["Gustavo Magaña López <28574085+gmagannaDevelop@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.2.28"
torch = "^1.10.2"
toml = "^0.10.2"
scikit-learn = "^1.0.2"
plotnine = "^0.8.0"
progress = "^1.6"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.0.1"
pylint = "^2.12.2"
jupyter = "^1.0.0"
black = "^22.1.0"

# IMPORTANT !!!
# change the utility script's name in the main module
# if you change it here
plotnine = "^0.8.0"
pandas = "^1.4.1"
[tool.poetry.scripts]
irm = "irm.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
